# Neural-CPP

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  test_doxyfile
core/examples/: loan_prediction_example.cpp  mnist_handwriting_example.cpp  parity_example.cpp  sonar_detection_example.cpp  xor_example.cpp
core/inc/: dataset.hpp  layer.hpp  math_ops.hpp  neural_network.hpp  tensor.hpp
core/src/: dataset.cpp  layer.cpp  math_ops.cpp  neural_network.cpp  tensor.cpp
docs/: NeuralNetworkDocs.md
docs/html/: annotated.html  annotated_dup.js  classes.html  classneuralcpp_1_1_neural_network-members.html  classneuralcpp_1_1_neural_network.html  classneuralcpp_1_1_neural_network.js  dir_4270bfced15e0e73154b13468c7c9ad9.html  dir_7e868af64e31779987291c90ae140f88.html  dir_7e868af64e31779987291c90ae140f88.js  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_vars.html  index.html  namespacemembers.html  namespacemembers_func.html  namespaceneuralcpp.html  namespaceneuralcpp.js  namespaces.html  namespaces_dup.js  navtreedata.js  navtreeindex0.js  neural__network_8hpp.html  neural__network_8hpp.js  neural__network_8hpp_source.html
docs/html/search/: all_0.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  classes_0.js  files_0.js  functions_1.js  functions_4.js  functions_5.js  functions_6.js  namespaces_0.js  searchdata.js  variables_0.js
models/: loan_prediction_model.nn
networks/: xor_model.nn
scripts/: image_veiwer.py
